feat: directly port Catppuccin themes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,32 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Catppuccin Latte -->
+    <color name="latte_base">#FFEFF1F5</color>
+    <color name="latte_mantle">#FFE6E9EF</color>
+    <color name="latte_crust">#FFDCE0E8</color>
+    <color name="latte_surface0">#FFCCD0DA</color>
+    <color name="latte_surface1">#FFBCC0CC</color>
+    <color name="latte_surface2">#FFACB0BE</color>
+    <color name="latte_overlay0">#FF9CA0B0</color>
+    <color name="latte_overlay1">#FF8C8FA1</color>
+    <color name="latte_overlay2">#FF7C7F93</color>
+    <color name="latte_subtext0">#FF6C6F85</color>
+    <color name="latte_subtext1">#FF5C5F77</color>
+    <color name="latte_text">#FF4C4F69</color>
+
+    <!-- Catppuccin Macchiato -->
+    <color name="macchiato_base">#FF24273A</color>
+    <color name="macchiato_mantle">#FF1E2030</color>
+    <color name="macchiato_crust">#FF181926</color>
+    <color name="macchiato_surface0">#FF363A4F</color>
+    <color name="macchiato_surface1">#FF494D64</color>
+    <color name="macchiato_surface2">#FF5B6078</color>
+    <color name="macchiato_overlay0">#FF6E738D</color>
+    <color name="macchiato_overlay1">#FF8087A2</color>
+    <color name="macchiato_overlay2">#FF939AB7</color>
+    <color name="macchiato_subtext0">#FFA5ADCB</color>
+    <color name="macchiato_subtext1">#FFB8C0E0</color>
+    <color name="macchiato_text">#FFCAD3F5</color>
 </resources>
